# ris_rs

./: .gitignore  Cargo.toml  benchmark_results.md  pyproject.toml
.github/workflows/: rust.yaml
benches/: README.md  parser.rs  python_bench.py  python_rispy.py  results.md  results.txt  rispy_comparison.rs  single_reference.rs
src/: content_iter.rs  error.rs  field.rs  handler.rs  handwritten.rs  hashmap_handler.rs  lib.rs  list_handler.rs  nom_parser.rs  parser.rs  python_bindings.rs  ref_iter.rs  reference.rs  tag.rs  utils.rs
tests/: appenzeller_herzog.rs
