[package]
name = "ris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nom = "7.1.3"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "extension-module"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "single_reference"
harness = false